tests/negative/test_attrs_non_type_type.orb
fnc main () () {
    sym (x 0);
    sym (y x::((type 0)));
};